# conan-xbuild

./: README.md  export.sh
app/: CMakeLists.txt  conanfile.py
app/app/: lib.cpp  lib.h
app/app_exe/: main.cpp
cmake/: CMakeLists.txt  conanfile.py
cmake/cmake/: lib.cpp  lib.h
cmake/cmake_exe/: main.cpp
cmakelib/: CMakeLists.txt  conanfile.py
cmakelib/cmakelib/: lib.cpp  lib.h
gcc/: conanfile.py
gcc/gcc/: lib.cpp  lib.h
gcc/gcc_exe/: main.cpp
gcc4gcc/: CMakeLists.txt  conanfile.py
gcc4gcc/gcc_exe/: main.cpp
profiles/: profile_build  profile_gcc  profile_host
testlib/: CMakeLists.txt  conanfile.py
testlib/testlib/: lib.cpp  lib.h
testlib4gcc/: conanfile.py
testlib4gcc/testlib/: lib.cpp
testtool/: CMakeLists.txt  conanfile.py
testtool/testtool/: lib.cpp  lib.h
testtool/testtool_exe/: main.cpp
testtool4gcc/: CMakeLists.txt  conanfile.py
testtool4gcc/testtool/: lib.cpp
zlib/: CMakeLists.txt  conanfile.py
zlib/zlib/: lib.cpp  lib.h
